# ai-automation-repo

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENCY_GUIDE.md  BLEEDING_EDGE_MODERNIZATION.md  CHANGELOG.md  COMPREHENSIVE_TRANSFORMATION.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  IMPROVEMENTS.md  MIGRATION.md  QUICK_START_GUIDE.md  README.md  TRANSFORMATION_COMPLETE.md  TRANSFORMATION_SUMMARY.md  Taskfile.yml  ULTRA_MODERNIZATION_2025.md  UPDATED_README.md  UPGRADE_BASELINE.md  alembic.ini  deploy.sh  docker-compose.yml  mkdocs.yml  pyproject.toml  pyrightconfig.json  renovate.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-cd.yml  ci.yml  docs.yml  release.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
config/: settings.py
docs/: gen_ref_pages.py  index.md
docs/upgrade/2026-q1/: baseline-inventory.md
examples/: crm_integration_workflow.py  data_analysis_workflow.py  email_processing_workflow.py  social_media_automation.py
k8s/: configmap.yaml  deployment.yaml  grafana-dashboard.json  ingress.yaml  namespace.yaml  postgres.yaml  prometheus-config.yaml  redis.yaml  secrets.yaml.example  service.yaml
scripts/: init-secrets.sh
src/: __init__.py  api.py  cli.py
src/agency/: __init__.py  billing.py  client.py  project.py
src/agents/: __init__.py  base.py  decision.py  task.py
src/auth/: __init__.py  api_key.py  jwt.py  middleware.py  models.py
src/caching/: __init__.py  cache_manager.py  strategies.py
src/circuit_breaker/: __init__.py  circuit_breaker.py  states.py
src/config/: __init__.py  settings.py
src/cost_tracking/: __init__.py  cost_tracker.py  models.py  pricing.py
src/database/: __init__.py  models.py
src/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  groq_provider.py  local_provider.py  openai_provider.py
src/logging/: __init__.py
src/monitoring/: __init__.py
src/routers/: __init__.py  agents.py  monitoring.py  tasks.py  workflows.py
src/secrets/: __init__.py  providers.py  secrets_manager.py
src/testing/: __init__.py  agent_tester.py  fixtures.py  llm_mocker.py
src/tools/: __init__.py  api_tool.py  base.py  data_processor.py  email_tool.py  registry.py  web_scraper.py
src/vector_store/: __init__.py  memory_store.py
src/workflows/: __init__.py  builder.py  engine.py  models.py
tests/: conftest.py  test_agents.py  test_api.py  test_database.py  test_llm.py  test_tools.py  test_workflows.py
