[tool.poetry]
name = "ai-automation-boilerplate"
version = "0.1.0"
description = "Comprehensive boilerplate for AI automation projects with turnkey client implementations"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"  # Supports Python 3.11, 3.12, 3.13
# Core AI/ML frameworks
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-anthropic = "^0.2.0"
llama-index = "^0.14.0"
haystack-ai = "^2.8.0"
transformers = {extras = ["torch"], version = "^4.46.0"}
openai = "^1.58.0"
anthropic = "^0.40.0"
groq = "^0.15.0"

# Automation and orchestration
crewai = "^0.203.0"
autogen = "^0.4.0"
prefect = "^3.0.0"
celery = "^5.4.0"

# Data handling
pandas = "^2.2.0"
numpy = "^1.26.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
aiosqlite = "^0.20.0"
prisma = "^0.15.0"
pinecone-client = "^5.0.0"
weaviate-client = "^4.9.0"

# Web/integration
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
streamlit = "^1.40.0"
gradio = "^5.0.0"
selenium = "^4.28.0"
playwright = "^1.49.0"

# Monitoring/Security
sentry-sdk = "^2.19.0"
prometheus-client = "^0.21.0"
auth0-python = "^4.7.0"
pyjwt = "^2.10.0"
firebase-admin = "^6.8.0"
psutil = "^6.1.0"

# Development and testing
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.0"
pytest-xdist = "^3.6.0"
pytest-mock = "^3.14.0"
pytest-benchmark = "^5.1.0"  # Performance benchmarking
pytest-randomly = "^3.16.0"  # Randomize test order to catch state dependencies
pytest-timeout = "^2.3.0"  # Prevent hanging tests
pytest-sugar = "^1.0.0"  # Better test output
pytest-clarity = "^1.0.0"  # Better assertion diffs
hypothesis = "^6.122.0"
faker = "^34.0.0"  # Generate fake data for testing
ruff = "^0.9.0"  # Replaces Black, isort, and Flake8
mypy = "^1.13.0"
pyright = "^1.1.391"  # Additional type checker
bandit = "^1.8.0"
safety = "^3.2.0"
pre-commit = "^4.0.0"
uv = "^0.5.11"  # Ultra-fast package installer
vulture = "^2.14"  # Find dead code
radon = "^6.0.0"  # Code complexity metrics
pip-audit = "^2.9.0"  # Security audit for dependencies

# Configuration and utilities
pydantic = "^2.10.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
jinja2 = "^3.1.0"
structlog = "^24.4.0"
aiofiles = "^23.2.1"
httpx = "^0.28.0"

# Caching and performance
redis = {extras = ["hiredis"], version = "^5.0.0"}
aiocache = "^0.12.0"

# Circuit breaker and resilience
tenacity = "^9.0.0"

# Distributed tracing
opentelemetry-distro = "^0.50b0"
opentelemetry-exporter-jaeger = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.50b0"
opentelemetry-instrumentation-httpx = "^0.50b0"

# Message queue (RabbitMQ)
aio-pika = "^9.4.0"

# Secrets management
hvac = "^2.1.0"  # HashiCorp Vault
boto3 = "^1.34.0"  # AWS Secrets Manager

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^7.0.0"
ipykernel = "^6.27.0"
mkdocs = "^1.6.0"  # Documentation
mkdocs-material = "^9.5.0"  # Material theme
mkdocstrings = {extras = ["python"], version = "^0.27.0"}  # Auto API docs
mkdocs-gen-files = "^0.5.0"  # Generate files
mkdocs-literate-nav = "^0.6.0"  # Navigation
mkdocs-section-index = "^0.3.0"  # Section index
mkdocs-git-revision-date-localized-plugin = "^1.3.0"  # Git dates
mkdocs-minify-plugin = "^0.8.0"  # Minify HTML/CSS/JS
pymdown-extensions = "^10.0"  # Markdown extensions
py-spy = "^0.4.0"  # Profiling tool
memray = "^1.15.0"  # Memory profiler
scalene = "^1.5.0"  # High-performance CPU+GPU+memory profiler

[tool.poetry.scripts]
ai-automation = "src.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Removed [tool.black] and [tool.isort] - now using Ruff for all formatting and linting

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
    -ra -q
    --cov=src
    --cov-report=html
    --cov-report=term-missing
    --cov-report=json
    --cov-fail-under=80
    --strict-markers
    --strict-config
    --benchmark-skip
    --benchmark-autosave
    --randomly-seed=last
    --randomly-dont-reorganise
    --timeout=300
    -n auto
"""
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
    "benchmark: marks tests as benchmarks",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*", "*/__init__.py"]
parallel = true
concurrency = ["thread", "gevent"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
target-version = "py311"
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "PTH",   # flake8-use-pathlib
    "RUF",   # Ruff-specific rules
    "ASYNC", # flake8-async
    "S",     # flake8-bandit (security)
]
ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional values in function calls
    "FBT003",
    # Ignore checks for possible passwords
    "S105", "S106", "S107",
    # Ignore complexity
    "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and imports
"tests/**/*" = ["PLR2004", "S101", "TID252", "S"]
# Examples and scripts can print
"examples/**/*" = ["T201"]
"scripts/**/*" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
